--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "http": "^0.0.1-security",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.3"
+    "@types/node": "^20.6.3",
+    "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.4"
   }
 }
