--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start-dev": "react-scripts start",
     "start": "ts-node src/ws-server.ts"
   },
   "keywords": [],
@@ -11,7 +12,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1"
@@ -21,5 +26,17 @@
     "@types/node": "^20.6.3",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
