--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "react": "^18.2.0",
