--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.11",
+    "@reduxjs/toolkit": "^1.9.6",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "sass": "^1.68.0",
     "socket.io": "^4.7.2",
